# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.85 2012/05/12 19:38:11 aballier Exp $

  12 May 2012; Alexis Ballier <aballier@gentoo.org>
  e2fsprogs-libs-1.42.1.ebuild:
  keyword ~amd64-fbsd

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> e2fsprogs-libs-1.41.7.ebuild,
  e2fsprogs-libs-1.41.12.ebuild, e2fsprogs-libs-1.41.14.ebuild,
  e2fsprogs-libs-1.42.ebuild, e2fsprogs-libs-1.42.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  13 Apr 2012; Ulrich Müller <ulm@gentoo.org> e2fsprogs-libs-1.42.ebuild,
  e2fsprogs-libs-1.42.1.ebuild:
  Move EAPI assignment to top of ebuild, bug 411875.

  08 Apr 2012; Raúl Porcel <armin76@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #403405

  03 Mar 2012; Markus Meier <maekke@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  arm stable, bug #403405

  02 Mar 2012; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Marking e2fsprogs-libs-1.42 ppc64 for bug 403405

  27 Feb 2012; Mike Frysinger <vapier@gentoo.org> e2fsprogs-libs-1.42.ebuild,
  e2fsprogs-libs-1.42.1.ebuild:
  Fix thinko in USE=static-libs handling #406079 by Andrew John Hughes.

*e2fsprogs-libs-1.42.1 (24 Feb 2012)

  24 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.42.1.ebuild:
  Version bump #405331 by teidakankan.

  22 Feb 2012; Brent Baude <ranger@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Marking e2fsprogs-libs-1.42 ppc for bug 403405

  21 Feb 2012; Jeff Horelick <jdhore@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  marked x86 per bug 403405

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Stable for amd64, wrt bug #403405

  18 Feb 2012; Jeroen Roovers <jer@gentoo.org> e2fsprogs-libs-1.42.ebuild:
  Stable for HPPA (bug #403405).

  28 Dec 2011; Mark Loeser <halcy0n@gentoo.org> e2fsprogs-libs-1.41.14.ebuild: