@@ -9,14 +9,16 @@ AUX e2fsprogs-libs-1.41.7-winnt.patch 5247 RMD160 26d58a2f4b471a256a2ca68e52ed29
 AUX e2fsprogs-libs-1.41.9-irix.patch 8580 RMD160 ccf9536d3818cf22315e84b1eac15447c404151a SHA1 14c72cdb2b9451e340399ff666ace21f61dc369f SHA256 90fd49315da0b8bb115c01c1ad13a3a9dc728bfa8c75f15f23eb89602568a644
 DIST e2fsprogs-libs-1.41.14.tar.gz 489703 RMD160 7bdbe03f21a8ac58179fc98083c7e07d8e37708b SHA1 9182ca542c5368d3e1df1a70040f28006771e240 SHA256 dbc7a138a3218d9b80a0626b5b692d76934d6746d8cbb762751be33785d8d9f5
 DIST e2fsprogs-libs-1.42.1.tar.gz 512772 RMD160 16af2424d0d20801636b9359a2bb0ed94d3350af SHA1 84e463448e2188301f318bc63e20241242ac2d42 SHA256 3c5ab6433f13b701c23066ea873394654176821c6760b5af1fe479ef84cbdfe5
+DIST e2fsprogs-libs-1.42.3.tar.gz 516639 RMD160 f6e6f3a8ae3acb6fc0bea0fb465a1c50550084b6 SHA1 21a5760fd0e2f94c100719f906f50bd0a867ff0b SHA256 e2ce483ae1d5dcd3287c8224c7c9c7044865309831be0686493446bcd93c61ca
 EBUILD e2fsprogs-libs-1.41.14.ebuild 1871 RMD160 b48fc1aafe6bc1a77c749d704109a190cd9390ea SHA1 de1c41793a91f29472f77fe2d53b021d6ca1b029 SHA256 8fecc59e1e0121c307edbb1e1c292ce157fc89f610ecc06f9d0f53a28b37c668
 EBUILD e2fsprogs-libs-1.42.1.ebuild 2146 RMD160 09a21e4eb29683b80b7280da6e6678cde1d088c0 SHA1 5730d113d789731713f3a28f4f63ed3a634a0143 SHA256 433699396ee8373d2014c92472acf6952c1c2bc390f4ba32e850a17e5f5aef18
-MISC ChangeLog 12093 RMD160 7aacdf2e1f8c66c593112f22de91367ba8f642ce SHA1 985db53832024ab48d04320e065438800ec852f5 SHA256 2b8eb171caa3889b35f6a788726fbe4ba4877a3406a56e33a10cdbc6ea964c21
+EBUILD e2fsprogs-libs-1.42.3.ebuild 2146 RMD160 45da06dabbdbc7c5a5ea52b0ccda1e53590241e5 SHA1 bfdd21934b5a40456e3c5e924ecb88b46a7b9c32 SHA256 fed954c4877535855962e9bd5e16e2fb8a1ed0dc1ff04f05f9bc3a504d657927
+MISC ChangeLog 12254 RMD160 404b20191ca1172e350574fa1a8117874b5b2ff6 SHA1 ea4825815de0e83039bf0557f8c9359748835312 SHA256 acc6092fd4c0f47428d4ac1717a1d65c7cf3c7f7a38f6c637a11b2961f1d5163
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/A5okACgkQX3X2B8XHTolHJACfTXnN0WvK6ib6njJqMapT7eN6
-D9cAnjPbP/S5CHlWKIjXjxgsrABfXcCq
-=Gy5b
+iEYEARECAAYFAk/CGQYACgkQX3X2B8XHTom1NwCfVzFwoh/DLLIWaMlmaWubMSn4
+Hh4An2AFpaFdh59XyKP9RsANKVjW5q4S
+=vtzW
 -----END PGP SIGNATURE-----
