@@ -1,0 +1,72 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/e2fsprogs-libs-1.42.3.ebuild,v 1.1 2012/05/22 19:44:22 vapier Exp $
+
+EAPI="2"
+
+case ${PV} in
+*_pre*) UP_PV="${PV%_pre*}-WIP-${PV#*_pre}" ;;
+*)      UP_PV=${PV} ;;
+esac
+
+inherit toolchain-funcs eutils multilib
+
+DESCRIPTION="e2fsprogs libraries (common error and subsystem)"
+HOMEPAGE="http://e2fsprogs.sourceforge.net/"
+SRC_URI="mirror://sourceforge/e2fsprogs/${PN}-${UP_PV}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint"
+IUSE="nls static-libs"
+
+RDEPEND="!sys-libs/com_err
+	!sys-libs/ss
+	!<sys-fs/e2fsprogs-1.41.8"
+DEPEND="nls? ( sys-devel/gettext )
+	virtual/pkgconfig"
+
+S=${WORKDIR}/${P%_pre*}
+
+src_prepare() {
+	printf 'all:\n%%:;@:\n' > doc/Makefile.in # don't bother with docs #305613
+	epatch "${FILESDIR}"/${PN}-1.41.12-darwin-makefile.patch
+	epatch "${FILESDIR}"/${PN}-1.41.9-irix.patch
+	if [[ ${CHOST} == *-mint* ]]; then
+		sed -i -e 's/_SVID_SOURCE/_GNU_SOURCE/' lib/uuid/gen_uuid.c || die
+	fi
+}
+
+src_configure() {
+	# We want to use the "bsd" libraries while building on Darwin, but while
+	# building on other Gentoo/*BSD we prefer elf-naming scheme.
+	local libtype
+	case ${CHOST} in
+		*-darwin*) libtype=--enable-bsd-shlibs  ;;
+		*-mint*)   libtype=                     ;;
+		*)         libtype=--enable-elf-shlibs  ;;
+	esac
+
+	# avoid a problem during parallel make, it bails because it creates the pic
+	# directory too late
+	mkdir ./lib/blkid/pic ./lib/et/pic ./lib/ss/pic ./lib/uuid/pic 
+
+	# we use blkid/uuid from util-linux now
+	ac_cv_lib_uuid_uuid_generate=yes \
+	ac_cv_lib_blkid_blkid_get_cache=yes \
+	ac_cv_path_LDCONFIG=: \
+	QUOTA_CMT='#' \
+	econf \
+		--disable-lib{blkid,uuid} \
+		--disable-quota \
+		${libtype} \
+		$(tc-has-tls || echo --disable-tls) \
+		$(use_enable nls)
+}
+
+src_install() {
+	emake STRIP=: DESTDIR="${D}" install || die
+	gen_usr_ldscript -a com_err ss
+	# configure doesn't have an option to disable static libs :/
+	use static-libs || find "${ED}" -name '*.a' -delete
+}
