@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.85 2012/05/12 19:38:11 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.86 2012/05/22 19:44:22 vapier Exp $
+
+*e2fsprogs-libs-1.42.3 (22 May 2012)
+
+  22 May 2012; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-libs-1.42.3.ebuild:
+  Version bump #416771 by Samuli Suominen.
 
   12 May 2012; Alexis Ballier <aballier@gentoo.org>
   e2fsprogs-libs-1.42.1.ebuild:
